<resources>
    <string name="app_name">MedicineTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_guest_user">Guest User</string>
    <string name="nav_email_address">Please Login first to use this application</string>
    <string name="about_us">About us</string>
    <string name="add_new_medicine">Add new medicine</string>
    <string name="communicate">Communicate</string>
    <string name="history_report">History/Report</string>
    <string name="my_profile">My Profile</string>
    <string name="share">Share</string>
    <string name="medicine_time">Medicine Time</string>
    <string name="next_doze">Next\nDoze</string>
    <string name="today_total">Todays \nTotal</string>
    <string name="take_action">Take \nAction</string>
    <string name="see_detail">See\nDetail</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_add_medicine">AddMedicineActivity</string>
    <string name="medicine_default">You don\'t have any medicine right now.</string>


    <string-array name="units">
        <item>pills</item>
        <item>ml</item>
        <item>mg</item>
    </string-array>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="dosage">Dosage</string>
    <string name="new_medicine">New Medicine</string>
    <string name="string_new_medicine">New Medicine</string>
    <string name="newname">NewName</string>
    <string name="remarks">Remarks</string>
    <string name="btnsubmit">Submit</string>
    <string name="times_per_day">Times per day</string>
    <string name="total_days">Total days</string>
    <string name="guest_user_defualt">Guest User</string>
    <string name="add_new_user">Add New User</string>
    <string name="new_user_age">Age:</string>
    <string name="user_email">Email:</string>
    <string name="user_name">Name:</string>
    <string name="switch_user">Switch User</string>
    <string name="user_image_photo">UserPhoto</string>
    <string name="new_user">New User</string>
    <string name="password">Password</string>
    <string name="male">male</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign up</string>
    <string name="female">female</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="afternoon">Afternoon</string>
    <string name="title_activity_switch_user">SwitchUserActivity</string>
    <string name="current_user">Current User:</string>
    <string name="switch_to">Switch To:</string>
    <string name="title_activity_show_detail">ShowDetailActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="author_name">Author Name:</string>
    <string name="_300260478">300260478</string>
    <string name="github">Github:</string>
    <string name="jiyun_shi">Jiyun Shi</string>
    <string name="partner">Partner:</string>
    <string name="shiv">Shiv</string>
    <string name="student_id">Student ID:</string>
    <string name="video">Video:</string>
    <string name="https_github_com_jiyunshi">https://github.com/JiyunShi</string>
    <string name="tba">tba</string>
    <string name="loading_detail">Loading Detail...</string>
    <string name="your_history_report">Your History Report</string>
    <string name="loading_report">Loading Report...</string>
    <string name="today_s_detail">Today\'s Detail</string>
    <string name="youtube_link">https://youtu.be/oBIyVZCjN20</string>
</resources>
