<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.niceday.medicinetracker.AddMedicineActivity"
    tools:showIn="@layout/activity_add_medicine">

    <TextView
        android:id="@+id/txtNewMedicineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/string_new_medicine"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewMedicineTitle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newMedicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:hint="@string/newname"
            android:inputType="text"
            android:textColor="@color/primaryLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout2"
        app:layout_constraintRight_toLeftOf="@+id/guideline">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:hint="@string/dosage"
            android:inputType="number"
            android:textColor="@color/primaryLight" />
    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="192dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <Spinner
        android:id="@+id/medicineUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="30dp"
        android:entries="@array/units"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

    <CheckBox
        android:id="@+id/ckboxMorning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/morning"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/ckboxAfternoon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/afternoon"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintLeft_toRightOf="@+id/ckboxMorning"
        android:layout_marginStart="10dp" />

    <CheckBox
        android:id="@+id/ckboxEvening"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/evening"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintLeft_toRightOf="@+id/ckboxAfternoon"
        android:layout_marginStart="10dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckboxMorning"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout4"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/totaldays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:hint="@string/total_days"
            android:inputType="numberSigned"
            android:textColor="@color/primaryLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/textInputLayout5"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/medicineRemark"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="serif"
            android:hint="@string/remarks"
            android:textColor="@color/primaryLight" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button5"
        style="@style/defualt_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnsubmit"
        android:onClick="addNewMedicineHandler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />




</android.support.constraint.ConstraintLayout>
